Fix description z-index

--- a/static/styles.css
+++ b/static/styles.css
@@ -42,6 +42,7 @@ html, body {
 }
 
 .tweet-img {
+    z-index: 0;
     position: fixed;
     top: 0;
     right: 0;
@@ -83,6 +84,7 @@ html, body {
     font-size: 1.5em;
     font-weight: 900;
     text-align: left;
+    position: relative;
 }
 
 a {
